--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -12,7 +12,7 @@
     <!-- Footer -->
     <footer style="background-color: #00FF00; height: 60px; width: 100%; text-align: center; position: absolute; bottom: 0;">
         <!-- Text in the footer, vertically and horizontally centered -->
-        <span style="color: white; font-size: 20px; position: relative; top: 50%; transform: translateY(-50%);">Best School Center</span>
+        <span style="color: white; font-size: 20px; position: relative; top: 50%; transform: translateY(-50%);">Best School</span>
     </footer>
 </body>
 </html>
