--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -10,7 +10,7 @@
         <span>Header</span> <!-- Header text -->
     </header>
     <footer>
-        <span>Best School Center</span> <!-- Footer text -->
+        <span>Best School</span> <!-- Footer text -->
     </footer>
 </body>
 </html>
