--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -48,7 +48,7 @@
         <span>Header</span>
     </header>
     <footer>
-        <span>Best School Center</span>
+        <span>Best School</span>
     </footer>
 </body>
 </html>
